header bug fixes and title

--- a/src/components/_root/root.sass
+++ b/src/components/_root/root.sass
@@ -1,1 +1,13 @@
 // foundation/_code.sass
+
+// THE MEDIA REQUESTS
+
+// @media screen and (max-width: 1440px)
+
+// @media screen and (max-width: 1024px)
+
+// @media screen and (max-width: 768px)
+
+// @media screen and (max-width: 425px)
+
+// @media screen and (max-width: 375px)
